# Knowledge-Insight-Agent

./: .env  README.md  app.py  main.py  pyproject.toml
decoupled/: document_processor.py  media_processor.py  raptor_rag.py  utils.py
prompts/: audio_analysis.txt  cluster_summary.txt  context_compression.txt  final_answer.txt  image_description.txt  video_frame_description.txt  video_summary.txt
