[project]
name = "knowledge-insight-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chroma>=0.2.0",
    "docling>=2.57.0",
    "docx2txt>=0.9",
    "faiss-cpu>=1.12.0",
    "ipython>=9.6.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-aws>=0.2.35",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-unstructured>=0.1.5",
    "matplotlib>=3.10.7",
    "matplotlib-inline>=0.1.7",
    "opencv-python-headless>=4.11.0.86",
    "pydub>=0.25.1",
    "pymupdf>=1.26.5",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-pptx>=1.0.2",
    "streamlit>=1.51.0",
    "tabula-py>=2.10.0",
    "tiktoken>=0.12.0",
    "umap-learn>=0.5.9.post2",
    "unstructured[all-docs]>=0.18.15",
]
